# voice-to-text

./: .containerignore  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  IBUS-CLOUD-SETUP.md  LICENSE  QUICKSTART.md  README.md  USAGE.md  config.yaml  debugging.md  demo.webm  dotool-quickstart.sh  eslint.config.cjs  fix-dotoold.sh  fix-ydotoold.sh  ibus-engine-cloud  install.sh  just-ibus-run.sh  justfile  package-lock.json  parakeet-v2.sh  pyproject.toml  test.py  test_engine.py  test_vosk.py  voice-to-text.spec
.agents/skills/voice-to-text-debug/: SKILL.md
.beads/: metadata.json
.github/workflows/: ci.yml  gnome-visual-tests.yml  release.yml
.hermes/plans/: fix-gnome-ext-streaming.md
.pi/goals/: active_goal_2026062419250914_mqscg2ot-dzom0a.md  active_goal_2026062419261287_mqschfux-flsu6p.md  active_goal_2026062420584581_mqsfsgje-umw3fu.md  active_goal_2026062421304455_mqsgxl1i-sfqh1s.md  active_goal_2026062422292404_mqsj10p4-69o4xm.md  goal_events.jsonl
.pi/goals/archived/: goal_2026062420375324_mqse5828-nrqou2.md  goal_2026062420481660_mqsduddj-jwsrr3.md  goal_2026062421023257_mqsflxed-41f5ej.md  goal_2026062421252290_mqsg06yb-pvnl10.md  goal_2026062421285888_mqsgg1ww-jxlpcn.md  goal_2026062421293892_mqsgs73m-z2myvo.md  (+5 more)
data/: ibus-cloud.xml  ibus-setup-cloud.desktop
docs/: ARCHITECTURE.md  adding-a-provider.md  ai_search_models_comparison.md  architecture.md  dbus-engine.md  dbus-env-var-research.md  dotool.md  ibus-registration.md  project-summary.md
docs/providers/: 60db.md  deepgram.md  elevenlabs.md  groq.md  voxtral.md
gnome-ext/: extension.js  gst-visualizer.js  hotkey.js  indicator.js  metadata.json  prefs.js  recorder.js  run-dev.sh  stylesheet.css  typer.js
gnome-ext/schemas/: gschemas.compiled  org.gnome.shell.extensions.voice-to-text.gschema.xml
scripts/: fix_ibus_install.sh  generate_test_audio.py  no-co-authored-by.sh  store-api-keys.sh  test_integration.py  test_microphone_icon.sh  voxtral_ibus.py
service/: com.happytomatoe.VoiceToText.service  install.sh  voice-daemon.service  voice-to-text-dbus-wrapper  voice-to-text.service
src/groq_voice/: __init__.py  audio_recorder.py  audio_stream.py  config.py  main.py
src/ibus_cloud/: __init__.py  __main__.py  audio.py  config.py  engine.py
src/voice_daemon/: __init__.py  audio_capture.py  config.py  frequency_widget.py  hotkey_listener.py  main.py  text_injector.py  tray.py
src/voice_to_text/: __init__.py  __main__.py  audio.py  bluetooth.py  config.py  dbus_service.py  engine.py  hybrid.py  main.py  profiling.py  stats_reporter.py  typer.py  usage_db.py
tests/: conftest.py  test_audio.py  test_bluetooth.py  test_config.py  test_dbus_service.py  test_deepgram.py  test_e2e.py  test_elevenlabs.py  test_gnome_providers.py  test_ibus.py  test_imports.py  test_integration.py  test_keyring.py  test_main.py  test_parakeet.py  test_profiling.py  test_providers.py  test_sixty.py  test_stats_reporter.py  test_usage_db.py  test_voxtral.py
tests/gnome-tests/: Containerfile  build-ext-zip.py  build.sh  find-target.sh  generate-references.sh  run-test.sh  snapshot.sh
(+46 files in other folders)
