[project]
name = "voice-to-text"
version = "0.1.0"
description = "Voice to Text using Groq Whisper and Voxtral APIs"
requires-python = ">=3.13"
dependencies = [
  "groq~=1.2.0",
  "sounddevice~=0.5.5",
  "numpy~=2.4.4",
  "pyyaml~=6.0.3",
  "python-dotenv~=1.2.2",
  "requests~=2.33.1",
  "websocket-client~=1.8.0",
  "mistralai[realtime]~=2.4,!=2.4.6",
]

[project.scripts]
voice-to-text = "voice_to_text.main:main"
voice-to-text-ibus-engine = "voice_to_text.ibus.engine:main"
voice-to-text-ibus-bridge = "voice_to_text.ibus.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_to_text"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyright>=1.1.398",
    "pre-commit>=4.2.0",
    "ruff>=0.15.0",
    "types-requests",
    "types-PyYAML",
]
