[project]
name = "voice-to-text"
version = "0.1.0"
description = "Voice to Text using Groq Whisper and Voxtral APIs"
requires-python = ">=3.13"
dependencies = [
  "groq~=1.2.0",
  "sounddevice~=0.5.5",
  "numpy~=2.4.4",
  "pyyaml~=6.0.3",
  "python-dotenv~=1.2.2",
  "httpx~=0.28.0",
  "websockets~=14.0",
  "dbus-next~=0.2.3",
  "mistralai[realtime]~=2.4,!=2.4.6",
]

[project.scripts]
voice-to-text-dbus = "voice_to_text.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_to_text"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
# dbus-next, groq, and sounddevice have incomplete type stubs
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pyright>=1.1.398",
    "pre-commit>=4.2.0",
    "ruff>=0.15.0",
    "types-requests",
    "types-PyYAML",
]
